--- a/workflows/ui-test.yml
+++ b/workflows/ui-test.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   ui_test:
-    runs-on: self-hosted  # Запуск на self-hosted runnert
+    runs-on: [self-hosted, windows]  # Запуск на self-hosted runnert
 
     steps:
       - name: Checkout code
