--- a/workflows/ui-test.yml
+++ b/workflows/ui-test.yml
@@ -14,12 +14,6 @@ jobs:
     runs-on: [self-hosted, windows, x64, test]  # Запуск на self-hosted runnert
 
     steps:
- 
-      - name: Check the environment
-        run: |
-          echo "RUNNER_OS: $RUNNER_OS"
-          echo "RUNNER_LABELS: $RUNNER_LABELS"
-
       
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,6 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install allure-pytest
 
