--- a/workflows/ui-test.yml
+++ b/workflows/ui-test.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12'  # Укажите нужную версию Python
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
